--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <title></title>
+  <style>
+    html {
+      font-family: sans-serif;
+      font-size: 130%;
+    }
+    
+    a {
+      color: black;
+    }
 
-<script src="lib/opentype.js"></script>
-<script src="lib/d3.js"></script>
+    a:visited {
+      color: black;
+    }
+  </style>
+</head>
 
-<script src="main.js"></script>
+<body>
+  <h1>prototypes</h1>
+  <a href="interaction-1"><h2>interaction-1</h2></a>
+  <a href="interaction-2"><h2>interaction-2</h2></a>
+  <a href="background-transformation"><h2>background-transformation</h2></a>
+  <a href="swamp"><h2>swamp</h2></a>
+  <a href="parallax"><h2>parallax</h2></a>
+  <a href="play"><h2>play</h2></a>
+</body>
+</html>
