--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
   <a href="swamp"><h2>swamp</h2></a>
   <a href="parallax"><h2>parallax</h2></a>
   <a href="play"><h2>play</h2></a>
+  <a href="overlap-1"><h2>overlap 1 (horizontal + vertical)</h2></a>
+  <a href="overlap-2"><h2>overlap 2 (spyglass)</h2></a>
 </body>
 </html>
